Upgrade PHP version to 8.2

--- a/.env.actions
+++ b/.env.actions
@@ -1,12 +1,22 @@
 DEBUG=false
 ENCRYPTER_KEY={encrypt-key}
 SAFE_MIGRATIONS=true
+VERBOSITY_LEVEL=basic
+MONOLOG_DEFAULT_CHANNEL=default
+MONOLOG_DEFAULT_LEVEL=INFO
+APP_ENV=testing
 
 APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
+CYCLE_SCHEMA_CACHE=true
+CYCLE_SCHEMA_WARMUP=false
 CACHE_STORAGE=file
+QUEUE_CONNECTION=sync
+CACHE_STORAGE=local
+STORAGE_DEFAULT=default
+SCHEDULER_MUTEX_CACHE_STORAGE=file
 
 JWT_SECRET=verysecretphrase
 JWT_TTL=3600
@@ -32,6 +42,5 @@ MAIL_HOST=
 MAIL_POST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=
 
 CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:8081"
