--- a/.env.sample
+++ b/.env.sample
@@ -7,27 +7,42 @@ ENCRYPTER_KEY={encrypt-key}
 # Set to TRUE to disable confirmation in `migrate` commands.
 SAFE_MIGRATIONS=true
 
+# basic, verbose, debug
+VERBOSITY_LEVEL=basic
+
+# local, testing, stage, prod
+APP_ENV=local
+
+# Use "roadrunner" channel if you want to use RoadRunner logger
+MONOLOG_DEFAULT_CHANNEL=default
+# DEBUG, INFO, NOTICE, WARNING, ERROR, CRITICAL, ALERT, EMERGENCY
+MONOLOG_DEFAULT_LEVEL=DEBUG
+
 APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
-CACHE_STORAGE=file
+# Store database schema in cache
+CYCLE_SCHEMA_CACHE=true
+
+# Preload ORM providers on boot
+CYCLE_SCHEMA_WARMUP=false
+
+QUEUE_CONNECTION=roadrunner
+CACHE_STORAGE=local
+STORAGE_DEFAULT=default
+SCHEDULER_MUTEX_CACHE_STORAGE=file
 
 JWT_SECRET=
 JWT_TTL=3600
 JWT_REFRESH_TTL=604800
-JWT_PUBLIC_KEY="{rsa-public-key}"
-JWT_PRIVATE_KEY="{rsa-private-key}"
+JWT_PUBLIC_KEY="{rsa-public-key}" # base64 encoded
+JWT_PRIVATE_KEY="{rsa-private-key}" # base64 encoded
 
 DB_HOST=localhost:33060
 DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
-
-DB_OLD_HOST=localhost:33060
-DB_OLD_NAME=production
-DB_OLD_USER=root
-DB_OLD_PASSWORD=secret
 
 FIREBASE_DATABASE_URI=
 FIREBASE_STORAGE_BUCKET=
@@ -54,6 +69,5 @@ MAIL_HOST=
 MAIL_POST=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=
 
 CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:8081"
