Implement data encryption in database at ORM level

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ DEBUG=true
 
 # Set to an application specific value, used to encrypt/decrypt cookies etc.
 ENCRYPTER_KEY={encrypt-key}
+DB_ENCRYPTER_KEY={encrypt-key}
 
 # Set to TRUE to disable confirmation in `migrate` commands.
 SAFE_MIGRATIONS=true
