Implement rate limit using Redis native commands

--- a/.env.actions
+++ b/.env.actions
@@ -30,6 +30,10 @@ DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
 
+REDIS_CONNECTION_STRING=cache:6379
+REDIS_HOST=cache
+REDIS_PORT=6379
+
 S3_REGION=us-east-1
 S3_ENDPOINT=
 S3_KEY=
