--- a/.env.sample
+++ b/.env.sample
@@ -45,6 +45,10 @@ DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
 
+REDIS_CONNECTION_STRING=localhost:6379
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 FIREBASE_DATABASE_URI=
 FIREBASE_STORAGE_BUCKET=
 FIREBASE_PROJECT_ID=
