--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-openssl": "*",
         "ext-pdo": "*",
         "ext-sockets": "*",
+        "ext-redis": "*",
         "aws/aws-sdk-php": "^3.190",
         "cycle/entity-behavior": "^1.1",
         "cycle/entity-behavior-uuid": "^1.0",
@@ -44,7 +45,7 @@
         "squizlabs/php_codesniffer": "3.*",
         "spiral/testing": "^2.3",
         "symfony/var-dumper": "^6.2",
-        "vimeo/psalm": "^4.30"
+        "vimeo/psalm": "^5.9.0"
     },
     "scripts": {
         "post-create-project-cmd": [
