--- a/.env.actions
+++ b/.env.actions
@@ -30,9 +30,7 @@ DB_NAME=cashtrack
 DB_USER=cashtrack
 DB_PASSWORD=secret
 
-REDIS_CONNECTION_STRING=cache:6379
-REDIS_HOST=cache
-REDIS_PORT=6379
+REDIS_CONNECTION=cache:6379
 
 S3_REGION=us-east-1
 S3_ENDPOINT=
