--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,11 @@
-name: release
+name: deploy
 
 on:
   workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 env:
   REPO: cashtrack/api
@@ -16,57 +16,7 @@ env:
   KUBECTL_BIN: https://storage.googleapis.com/kubernetes-release/release/v1.24.4/bin/linux/amd64/kubectl
 
 jobs:
-  build:
-    runs-on: [self-hosted, Linux, x64]
-    permissions:
-      contents: read
-      packages: write
-
-    steps:
-      - name: Checkout repository
-        if: github.event_name != 'pull_request'
-        uses: actions/checkout@v3
-
-      # Login against a Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Login to Docker Hub
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USER }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      # Extract metadata (tags, labels) for Docker
-      # https://github.com/docker/metadata-action
-      - name: Extract Docker metadata
-        if: github.event_name != 'pull_request'
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REPO }}
-          tags: |
-            type=semver,pattern={{version}}
-
-      # Setup BuildX
-      # https://github.com/docker/setup-buildx-action
-      - name: Setup BuildX
-        uses: docker/setup-buildx-action@v2
-        id: buildx
-        with:
-          install: true
-
-      # Build and push Docker image with Build (don't push on PR)
-      # https://github.com/docker/build-push-action
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
   deploy:
-    needs: [ build ]
     runs-on: [self-hosted, Linux, x64]
     permissions:
       contents: read
