--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,14 @@
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-pdo": "*",
-        "ext-sockets": "*",
         "ext-redis": "*",
+        "ext-sockets": "*",
         "aws/aws-sdk-php": "^3.190",
         "cycle/entity-behavior": "^1.1",
         "cycle/entity-behavior-uuid": "^1.0",
         "doctrine/collections": "^1.8",
         "firebase/php-jwt": "^6.0",
+        "google/apiclient": "^2.12.1",
         "illuminate/collections": "^9.52",
         "kreait/firebase-php": "^7.0",
         "laminas/laminas-diactoros": "^2.25",
