--- a/.env.sample
+++ b/.env.sample
@@ -59,6 +59,14 @@ FIREBASE_CLIENT_X509_CERT_URL=
 FIREBASE_PRIVATE_KEY_ID=
 FIREBASE_PRIVATE_KEY=
 
+GOOGLE_API_CLIENT_ID=
+GOOGLE_API_CLIENT_SECRET=
+GOOGLE_API_PROJECT_ID=
+GOOGLE_API_AUTH_URI=
+GOOGLE_API_TOKEN_URI=
+GOOGLE_API_AUTH_PROVIDER_X509_CERT_URL=
+GOOGLE_API_REDIRECT_URI=
+
 S3_REGION=us-east-1
 S3_ENDPOINT=
 S3_KEY=
