--- a/.rr.yaml
+++ b/.rr.yaml
@@ -13,7 +13,7 @@ http:
     - http_metrics
     - gzip
   pool:
-    num_workers: 10
+    num_workers: ${RR_HTTP_NUM_WORKERS}
     supervisor:
       max_worker_memory: 100
 
