Implement Passkeys support

--- a/.env.sample
+++ b/.env.sample
@@ -23,6 +23,10 @@ APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
+# Passkey service
+AUTH_PASSKEY_SERVICE_ID=dev-cash-track.app
+AUTH_PASSKEY_SERVICE_NAME="Dev Cash Track"
+
 # Store database schema in cache
 CYCLE_SCHEMA_CACHE=true
 
