--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "spiral/translator": "^3.8",
         "spiral/validator": "^1.3",
         "symfony/mailer": "^6.3",
-        "voku/portable-utf8": "^6.0"
+        "voku/portable-utf8": "^6.0",
+        "web-auth/webauthn-lib": "^4.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6",
