Set Github Actions env variables for passkeys

--- a/.env.actions
+++ b/.env.actions
@@ -11,6 +11,9 @@ APP_URL=http://localhost:8080
 WEBSITE_URL=http://localhost:3000
 WEB_APP_URL=http://localhost:8081
 
+AUTH_PASSKEY_SERVICE_ID=dev-cash-track.app
+AUTH_PASSKEY_SERVICE_NAME="Dev Cash Track"
+
 CYCLE_SCHEMA_CACHE=true
 CYCLE_SCHEMA_WARMUP=false
 CACHE_STORAGE=file
