--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         "spiral/translator": "^3.12",
         "spiral/validator": "^1.5",
         "symfony/mailer": "^6.4",
+        "symfony/property-access": "^7.1",
+        "symfony/property-info": "^7.1",
+        "symfony/serializer": "^7.1",
         "voku/portable-utf8": "^6.0",
         "web-auth/webauthn-lib": "^4.8"
     },
@@ -47,7 +50,7 @@
         "squizlabs/php_codesniffer": "3.*",
         "spiral/testing": "^2.7",
         "symfony/var-dumper": "^6.4",
-        "vimeo/psalm": "^5.24"
+        "vimeo/psalm": "^5.25.0"
     },
     "scripts": {
         "post-create-project-cmd": [
