--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "spiral-packages/scheduler": "^2.1",
         "spiral/cycle-bridge": "^2.9",
         "spiral/filters-bridge": "^1.0",
-        "spiral/framework": "^3.12",
+        "spiral/framework": "3.13.0", // 3.14.6 has some container scope issues with testing
         "spiral/nyholm-bridge": "^1.3",
         "spiral/roadrunner-bridge": "^3.5.0",
         "spiral/roadrunner-cli": "^2.6",
