Add environment to GitHub Action deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   deploy:
     runs-on: [self-hosted, Linux, x64]
+    environment: prod
     permissions:
       contents: read
       packages: write
