--- a/composer.json
+++ b/composer.json
@@ -46,10 +46,11 @@
         "web-auth/webauthn-lib": "^4.8"
     },
     "require-dev": {
+        "brianium/paratest": "^6.11",
         "phpunit/phpunit": "^9.6",
         "qossmic/deptrac-shim": "^1.0",
-        "squizlabs/php_codesniffer": "3.*",
         "spiral/testing": "^2.7",
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/var-dumper": "^6.4",
         "vimeo/psalm": "^5.25.0"
     },
@@ -61,12 +62,12 @@
             "spiral get-binary"
         ],
         "checks": [
-            "./vendor/bin/phpunit",
+            "./vendor/bin/paratest",
             "./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src",
             "./vendor/bin/psalm --php-version=8.2 --show-info=true --no-cache"
         ],
         "phpunit": [
-            "./vendor/bin/phpunit"
+            "./vendor/bin/paratest"
         ],
         "phpcs": [
             "./vendor/bin/phpcs -p -n --standard=PSR12 --colors --report=code ./app/src"
