--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "spiral-packages/scheduler": "^2.1",
         "spiral/cycle-bridge": "^2.9",
         "spiral/filters-bridge": "^1.0",
-        "spiral/framework": "3.13.0",
+        "spiral/framework": "^3.14",
         "spiral/nyholm-bridge": "^1.3",
         "spiral/roadrunner-bridge": "^3.5.0",
         "spiral/roadrunner-cli": "^2.6",
@@ -48,7 +48,7 @@
     "require-dev": {
         "brianium/paratest": "^6.11",
         "phpunit/phpunit": "^9.6",
-        "qossmic/deptrac-shim": "^1.0",
+        "qossmic/deptrac": "*",
         "spiral/testing": "^2.7",
         "squizlabs/php_codesniffer": "3.*",
         "symfony/var-dumper": "^6.4",
