Fix psalm errors, update workflow command to run unit tests

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -140,7 +140,7 @@ jobs:
           php app.php migrate -s -n
 
       - name: Run PHPUnit
-        run: ./vendor/bin/phpunit --coverage-clover=coverage.xml
+        run: XDEBUG_MODE=coverage ./vendor/bin/paratest --coverage-clover=coverage.xml
 
       - name: Upload Coverage To Codecov
         continue-on-error: true
