Initial setup for opentelemetry tracing

--- a/.env.sample
+++ b/.env.sample
@@ -86,3 +86,13 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 
 CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:8081"
+
+TELEMETRY_DRIVER=otel
+OTEL_SERVICE_NAME=api
+OTEL_SERVICE_NAMESPACE=cash-track
+OTEL_SERVICE_VERSION=1.0.0
+OTEL_TRACES_EXPORTER=otlp
+OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+OTEL_EXPORTER_OTLP_CLIENT=grpc
+OTEL_EXPORTER_OTLP_ENDPOINT=http://127.0.0.1:4317
+OTEL_PHP_TRACES_PROCESSOR=simple
