--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -6,3 +6,16 @@ services:
     ports:
       - 1025:1025 # smtp server
       - 8025:8025 # web ui
+  collector:
+    image: otel/opentelemetry-collector-contrib
+    command: [ "--config=/etc/otel-collector-config.yml" ]
+    volumes:
+      - ./otel-collector-config.yml:/etc/otel-collector-config.yml
+    ports:
+      - "4318:4318"
+      - "4317:4317"
+
+  zipkin:
+    image: openzipkin/zipkin-slim
+    ports:
+      - "9411:9411"
