--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "aws/aws-sdk-php": "^3.305",
         "cycle/entity-behavior": "^1.3",
         "cycle/entity-behavior-uuid": "^1.2",
+        "cycle/orm": "2.9.3",
         "cycle/migrations": "^4.12.0",
         "doctrine/collections": "^2.2",
         "firebase/php-jwt": "^6.10",
@@ -26,6 +27,8 @@
         "kreait/firebase-php": "^7.16",
         "laminas/laminas-diactoros": "^3.5",
         "lcobucci/jwt": "^5.5",
+        "open-telemetry/exporter-otlp": "^1.2",
+        "open-telemetry/transport-grpc": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.4",
         "ramsey/uuid": "^4.7",
         "spiral-packages/league-event": "^1.0",
@@ -34,6 +37,7 @@
         "spiral/filters-bridge": "^1.0.2",
         "spiral/framework": "^3.14",
         "spiral/nyholm-bridge": "^1.3",
+        "spiral/otel-bridge": "^1.2",
         "spiral/roadrunner-bridge": "^v4.0.0-RC2",
         "spiral/roadrunner-cli": "^2.6",
         "spiral/stempler-bridge": "^3.12",
@@ -105,7 +109,9 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "spiral/composer-publish-plugin": true
+            "php-http/discovery": true,
+            "spiral/composer-publish-plugin": true,
+            "tbachert/spi": true
         }
     },
     "minimum-stability": "dev",
