--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -28,7 +28,7 @@ jobs:
           runner: self-hosted
         with:
           php-version: '8.4'
-          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis
+          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis, grpc
           tools: composer
 
       - name: Get Composer Cache Directory
@@ -65,7 +65,7 @@ jobs:
           runner: self-hosted
         with:
           php-version: '8.4'
-          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis
+          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis, grpc
           tools: composer
 
       - name: Get Composer Cache Directory
@@ -123,7 +123,7 @@ jobs:
         with:
           php-version: '8.4'
           coverage: pcov
-          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis
+          extensions: zip, xsl, dom, exif, intl, pcntl, bcmath, sockets, mbstring, pdo_mysql, mysqli, redis, grpc
           tools: composer, phpunit
 
       - name: Get Composer Cache Directory
