--- a/.env.sample
+++ b/.env.sample
@@ -95,4 +95,5 @@ OTEL_TRACES_EXPORTER=otlp
 OTEL_EXPORTER_OTLP_PROTOCOL=grpc
 OTEL_EXPORTER_OTLP_CLIENT=grpc
 OTEL_EXPORTER_OTLP_ENDPOINT=http://127.0.0.1:4317
+OTEL_EXPORTER_OTLP_ENDPOINT_RR=127.0.0.1:4317
 OTEL_PHP_TRACES_PROCESSOR=simple
